# local-llm-wiki

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODING_INSTRUCTIONS.md  DESIGN.md  FRONTEND.md  IMPLEMENTATION_PHASES.md  IMPLEMENTATION_PLAN.md  OBSIDIAN_CLI_COMMANDS.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  local_llm_wiki_obsidian_implementation_plan.md  package-lock.json  package.json  plan.md  pyproject.toml
apps/desktop/backend/: app.py  pyproject.toml
apps/desktop/backend/.pytest-tmp-run-phase0/test_bootstrap_creates_directo0/.llm-wiki/: config.json
apps/desktop/backend/.pytest-tmp-run-phase0/test_bootstrap_is_idempotent_f0/.llm-wiki/: config.json
apps/desktop/backend/.pytest-tmp-run-phase0/test_database_contains_require0/.llm-wiki/: config.json
apps/desktop/backend/llm_wiki_backend/: main.py
apps/desktop/backend/llm_wiki_backend/api/: routes.py
apps/desktop/backend/llm_wiki_backend/core/: __init__.py  config.py  errors.py  models.py
apps/desktop/backend/llm_wiki_backend/db/: service.py
apps/desktop/backend/llm_wiki_backend/ingestion/: extractors.py  service.py  types.py  watcher.py
apps/desktop/backend/llm_wiki_backend/llm/: __init__.py  groq.py
apps/desktop/backend/llm_wiki_backend/security/: __init__.py  secrets.py
apps/desktop/backend/llm_wiki_backend/vault/: service.py
apps/desktop/backend/llm_wiki_backend/wiki/: service.py
apps/desktop/backend/tests/: test_feature22_hashing.py  test_feature24_headings.py  test_feature27_html.py  test_phase1.py  test_phase2.py  test_phase3.py
(+93 files in other folders)
