[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-llm-wiki"
version = "0.1.0"
description = "Local-first Obsidian LLM wiki foundation"
requires-python = ">=3.10"
dependencies = [
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
desktop = [
    "PySide6>=6.7.0",
]
security = [
    "keyring>=25.0.0",
]

[project.scripts]
llm-wiki = "llm_wiki.gui_app:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["llm_wiki/tests"]

[tool.setuptools.packages.find]
include = ["llm_wiki*"]
