[project]
name = "local-llm-wiki-backend"
version = "0.1.0"
description = "Phase 1 backend for local LLM wiki vault setup"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0",
  "requests>=2.32.0",
  "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
